add o projeto automation practice

--- a/ruby_test/cucumber.yml
+++ b/ruby_test/cucumber.yml
@@ -1,15 +1,18 @@
+#configuração de start de projeto
+
 ## YAML Templatesss
 ---
-default: -p pretty -p html -p no_headless -p hmg
+default: -p pretty -p acesso -p chrome -p html -p json
 
 pretty: --format pretty
 ci:  --format progress
 
+acesso: ACESSO=acesso
+#producao:  AMBIENTE=producao
+
+firefox: BROWSER=firefox
+chrome: BROWSER=chrome
+chrome_headless: BROWSER=chrome_headless
+
 html:  --format html --out=results/report.html
 json:  --format json --out=results/report.json
-
-hmg:  ENVIRONMENT_TYPE=hmg
-dev:  ENVIRONMENT_TYPE=dev
-
-headless:  HEADLESS=headless
-no_headless:  HEADLESS=no_headless
