--- a/ruby_test/Gemfile
+++ b/ruby_test/Gemfile
@@ -1,10 +1,10 @@
-source 'http://rubygems.org'
 
-gem 'capybara', '<3.3'
+source "https://rubygems.org"
+
+
+gem 'capybara'
 gem 'cucumber'
-gem 'selenium-webdriver', '~>3.4'
 gem 'rspec'
-gem 'site_prism', '2.15.1'
-gem 'syntax'
-gem 'rubocop'
-gem 'byebug'
+gem 'site_prism'
+gem 'selenium-webdriver'
+
